	PR target/42564 	* config/sparc/sparc.h (SPARC_SYMBOL_REF_TLS_P): Delete. 	* config/sparc/sparc-protos.h (legitimize_pic_address): Likewise. 	(legitimize_tls_address): Likewise. 	(sparc_tls_referenced_p): Likewise. 	* config/sparc/sparc.c (sparc_expand_move): Use legitimize_tls_address 	and adjust calls to legitimize_pic_address. 	(legitimate_constant_p) Use sparc_tls_referenced_p. 	(legitimate_pic_operand_p): Likewise. 	(sparc_legitimate_address_p): Do not use SPARC_SYMBOL_REF_TLS_P. 	(sparc_tls_symbol_ref_1): Delete. 	(sparc_tls_referenced_p): Make static, recognize specific patterns. 	(legitimize_tls_address): Make static, handle CONST patterns. 	(legitimize_pic_address): Make static, remove unused parameter and 	adjust recursive calls. 	(sparc_legitimize_address): Make static, use sparc_tls_referenced_p 	and adjust call to legitimize_pic_address. 	(sparc_output_mi_thunk): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155662 138bc75d-0d04-0410-961f-82ee72b054a4